--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 - 👋 Hi, I’m @digitaluv
-- 👀 I’m certified Digital Marketer but i am interested in Web Development
-- 🌱 I’m currently learning JavaScript
+- 👀 I’m certified Digital Marketer but i would like to start my career in Web Development
+- 🌱 I’m currently learning React
 - 📫 You can reach me at osuv07@gmail.com
 - <!-- - 💞️ I’m looking to collaborate on ... -->
 <!---
