--- a/README
+++ b/README
@@ -1,9 +1,1 @@
-- 👋 Hi, I’m @digitaluv
-- 👀 I’m certified Digital Marketer but i would like to start my career in Web Development
-- 🌱 I’m currently learning React
-- 📫 You can reach me at osuv07@gmail.com
-- <!-- - 💞️ I’m looking to collaborate on ... -->
-<!---
-digitaluv/digitaluv is a ✨ special ✨ repository because its `README.md` (this file) appears on your GitHub profile.
-You can click the Preview link to take a look at your changes.
---->
+React Js front-end web development fresher with an eagerness to learn and share new ideas. I possess exceptional analytical, multi-tasking and problem-solving skills along with strong communication skills.
