--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-React Js front-end web development fresher with an eagerness to learn and share new ideas. I possess exceptional analytical, multi-tasking and problem-solving skills along with strong communication skills.
+React Js front-end web development fresher with an eagerness to learn and share new ideas. 
+I possess exceptional analytical, multi-tasking and problem-solving skills along with strong communication skills.
