--- a/README
+++ b/README
@@ -1,2 +1,1 @@
-React Js front-end web development fresher with an eagerness to learn and share new ideas. 
-I possess exceptional analytical, multi-tasking and problem-solving skills along with strong communication skills.
+Dynamic and results-oriented App and Web Developer with a passion for creating innovative digital solutions. With hands-on experience in React Native, React JS, and Firebase, I specialize in building cross-platform mobile applications and responsive web applications. My expertise extends to UI/UX design, graphic design, and digital marketing, allowing me to deliver comprehensive solutions from concept to deployment.
