--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-Dynamic and results-oriented App and Web Developer with a passion for creating innovative digital solutions. With hands-on experience in React Native, React JS, and Firebase, I specialize in building cross-platform mobile applications and responsive web applications. My expertise extends to UI/UX design, graphic design, and digital marketing, allowing me to deliver comprehensive solutions from concept to deployment.
+Dynamic and results-oriented App and Web Developer with a passion for creating innovative digital solutions. 
+With hands-on experience in React Native, React JS, and Firebase, I specialize in building cross-platform mobile applications and responsive web applications. 
+My expertise extends to UI/UX design, graphic design, and digital marketing, allowing me to deliver comprehensive solutions from concept to deployment.
